fix: update link color and enhance hover effects for improved visibility

--- a/css/style-dark.css
+++ b/css/style-dark.css
@@ -33,7 +33,7 @@ body {
 }
 
 .linknero {
-    color: rgb(0, 0, 0);
+    color: black;
     font-weight: bold;
     text-decoration: none;
     position: relative;
@@ -86,6 +86,13 @@ hr.rounded {
     transform: scale(1.1);
     text-shadow: 0 0 18px rgba(255, 255, 255, 0.7), 0 0 15px rgba(255, 255, 255, 0.5);
     border-bottom-color: white;
+}
+
+.linknero:hover {
+    color: #000000;
+    transform: scale(1.1);
+    text-shadow: 0 0 18px rgba(0, 0, 0, 0.7), 0 0 15px rgba(255, 255, 255, 0.5);
+    border-bottom-color: rgb(0, 0, 0);
 }
 
 .tastobianco:hover {
